--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
+    "formidable": "^3.5.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
